--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
-[submodule "bundle/nerdtree"]
-	path = bundle/nerdtree
+[submodule "vim/bundle/nerdtree"]
+	path = vim/bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
-[submodule "bundle/tabular"]
-	path = bundle/tabular
+[submodule "vim/bundle/tabular"]
+	path = vim/bundle/tabular
 	url = git://github.com/godlygeek/tabular.git
-[submodule "bundle/zencoding"]
-	path = bundle/zencoding
+[submodule "vim/bundle/zencoding"]
+	path = vim/bundle/zencoding
 	url = git://github.com/mattn/zencoding-vim.git
-[submodule "bundle/ack"]
-	path = bundle/ack
+[submodule "vim/bundle/ack"]
+	path = vim/bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
+[submodule "vim/bundle/nerdcommenter"]
+	path = vim/bundle/nerdcommenter
 	url = git://github.com/scrooloose/nerdcommenter.git
-[submodule "bundle/snippets"]
-	path = bundle/snippets
+[submodule "vim/bundle/snippets"]
+	path = vim/bundle/snippets
 	url = git://github.com/carlosvillu/coffeScript-VIM-Snippets
-[submodule "bundle/neco-ghc"]
-	path = bundle/neco-ghc
+[submodule "vim/bundle/neco-ghc"]
+	path = vim/bundle/neco-ghc
 	url = git://github.com/ujihisa/neco-ghc.git
-[submodule "bundle/neocomplcache"]
-	path = bundle/neocomplcache
+[submodule "vim/bundle/neocomplcache"]
+	path = vim/bundle/neocomplcache
 	url = git://github.com/tosik/neocomplcache.git
-[submodule "bundle/mako"]
-	path = bundle/mako
+[submodule "vim/bundle/mako"]
+	path = vim/bundle/mako
 	url = git://github.com/sophacles/vim-bundle-mako.git
-[submodule "bundle/command-t"]
-	path = bundle/command-t
+[submodule "vim/bundle/command-t"]
+	path = vim/bundle/command-t
 	url = git://github.com/wincent/Command-T
