--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/command-t"]
 	path = vim/bundle/command-t
 	url = git://github.com/wincent/Command-T
+[submodule "vim/bundle/gnugp.vim"]
+	path = vim/bundle/gnugp.vim
+	url = git://github.com/vim-scripts/gnupg.vim.git
