--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,3 @@
-[submodule "vim/bundle/vim-colors-solarized"]
-	path = vim/bundle/vim-colors-solarized
-	url = git://github.com/altercation/vim-colors-solarized.git
-[submodule "scripts/gnome-terminal-colors-solarized"]
-	path = scripts/gnome-terminal-colors-solarized
-	url = git://github.com/sigurdga/gnome-terminal-colors-solarized.git
-[submodule "vim/bundle/gnupg.vim"]
-	path = vim/bundle/gnupg.vim
-	url = git://github.com/vim-scripts/gnupg.vim.git
-[submodule "vim/bundle/nerdtree"]
-	path = vim/bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
-[submodule "vim/bundle/bufexplorer.zip"]
-	path = vim/bundle/bufexplorer.zip
-	url = git://github.com/vim-scripts/bufexplorer.zip.git
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
+	url = git://github.com/gmarik/vundle.git
