--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,1 +1,5 @@
-setw -g monitor-activity on
+set-option -g prefix C-j
+unbind-key C-b
+bind-key C-j send-prefix
+set -g status-left-length 20
+set -s escape-time 0
