--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,3 +3,4 @@ unbind-key C-b
 bind-key C-j send-prefix
 set -g status-left-length 20
 set -s escape-time 0
+set -g default-terminal "screen-256color"
