improve tmux experience

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,19 @@
-set-option -g prefix C-j
-unbind-key C-b
-bind-key C-j send-prefix
+# Source relevat files
+source-file /usr/share/tmux/vim-keys.conf
+
+# Set options
 set -g status-left-length 20
 set -s escape-time 0
 set -g default-terminal "screen-256color"
+set -g base-index 1
+set -g status off
+set -g history-limit 5000
+
+# Bind keys
+set-option -g prefix C-j
+unbind-key C-b
+bind-key C-j send-prefix
+bind-key space choose-tree
+
+# Kiliaro session
+new -d -s 0-Kiliaro -c ~/src/kiliaro -n vim vim
