increase tmux history

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set -s escape-time 0
 set -g default-terminal "screen-256color"
 set -g base-index 1
 set -g status off
-set -g history-limit 5000
+set -sg history-limit 10000
 
 # Bind keys
 set-option -g prefix C-j
