more improvements to the environment

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,4 +16,4 @@ bind-key C-j send-prefix
 bind-key space choose-tree
 
 # Kiliaro session
-new -d -s 0-Kiliaro -c ~/src/kiliaro -n vim vim
+#new -d -s 0-Kiliaro -c ~/src/kiliaro -n vim vim
