--- a/i3/config
+++ b/i3/config
@@ -31,7 +31,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvtc -e tmux
+bindsym $mod+Return exec urxvtc -cd $(cat ~/.last_working_directory)
 
 # kill focused window
 bindsym $mod+Shift+q kill
